Update Security 5 to use Thymeleaf 3.1.0-SNAPSHOT